tests/ui/parser/issues/issue-62894.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-62894.rs:6:14
   |
LL | fn f() { assert_eq!(f(), (), assert_eq!(assert_eq!
   |        -           -                   - unclosed delimiter
   |        |           |
   |        |           unclosed delimiter
   |        unclosed delimiter
LL |
LL | fn main() {}
   |              ^

error: aborting due to previous error

